PrivateEndpointTesting/nsg-useast-test.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "networkSecurityGroups_Azure_Prod_NSG_template_name": {
            "defaultValue": "NSG-USEast-Test",
            "type": "string"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_Azure_Prod_NSG_template_name')]",
            "apiVersion": "2019-04-01",
            "location": "eastus",
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-cha-PublicIP-https",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "8.18.111.0/24",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 600,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-cha-PublicIP-ssh",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "8.18.111.0/24",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 605,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-rcc-PublicIP-https",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "8.21.68.0/24",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 610,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-rcc-PublicIP-ssh",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "8.21.68.0/24",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 615,
                            "direction": "Inbound"
                        }
                    },
                        {
                        "name": "Allow-Azure-monitoring",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "168.63.129.16/32",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 4000,
                            "direction": "Inbound"
                        }
                    },
                        {
                        "name": "Deny-VNET-inbound-TCP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Deny",
                            "priority": 4050,
                            "direction": "Inbound"
                        }
                    },
                        {
                        "name": "Deny-VNET-inbound-UDP",
                        "properties": {
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Deny",
                            "priority": 4055,
                            "direction": "Inbound"
                        }
                    }    
                ]
            },
            "dependsOn": []
        }
    ]
}
